# EzRemote_Project_Computer_Server

./: App.cpp  App.h  AppState.cpp  AppState.h  CMakeLists.txt  CommandExec.cpp  CommandExec.h  ConnectionHandler.cpp  ConnectionHandler.h  HandshakeHandler.cpp  HandshakeHandler.h  JSON.cpp  JSON.h  MessageAnalysis.cpp  MessageAnalysis.h  RemoteServer.cpp  RemoteServer.h  RequestHandler.cpp  RequestHandler.h  ShutdownCommand.cpp  ShutdownCommand.h  TimeObject.cpp  TimeObject.h  main.cpp
documentation/: client-server_communication_protocol.txt
